fix: prevent butterfly clipping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ main image
   position: relative;
   width: 100%;
   height: 100vh; /* 필요에 맞게 조정 */
-  overflow: hidden;
+  overflow: visible;
   background-color: #00007a;
 }
 
